# graphrag-based-rust-app

./: .gitignore  QUICK_START.md  README.md  main.py  next.config.js  package-lock.json  package.json  tailwind.config.js
backend/: main.py  requirements.txt
backend/agent/: README.md  agent.py  semantic_agent.py
backend/tools/: neo4j_connector.py  pinecone_connector.py
input/: doc.txt
processed/: output.json
rust-preprocessor/: Cargo.toml  README.md
rust-preprocessor/src/: document.rs  entities.rs  main.rs  output.rs
src/app/: page.tsx
src/app/api/chat/: route.ts
src/components/: ChatInput.tsx  ChatMessage.tsx  Chatbot.tsx
