[package]
name = "healthcare-preprocessor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for preprocessing healthcare insurance documents"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
csv = "1.3.0"
regex = "1.10.3"
aho-corasick = "1.1.2"
anyhow = "1.0.79"
thiserror = "1.0.56"
polars = { version = "0.37.0", features = ["lazy", "csv", "json"] }
lopdf = { version = "0.31.0", optional = true }
rayon = "1.8.1"
log = "0.4.20"
env_logger = "0.11.1"

[features]
default = []
pdf = ["lopdf"]

[[bin]]
name = "healthcare-preprocessor"
path = "src/main.rs"